test/netlist/error/write-input.bop
A(a, b) = c
where
  a = Not(b);
  c = Id(a);
end where;
